2022-10-27  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Add BuildRequires socat.

2022-08-17  Martin Liska  <mliska@suse.cz>

	* debuginfod.service: Add new debuginfod.sysconfig
	value DEBUGINFOD_EXTRA_ARGS.
	* debuginfod.sysconfig: Likewise.

2022-08-16  Martin Liska  <mliska@suse.cz>

	* profile.csh.in: Support nullglob in profile.*.in files.
	* profile.sh.in: Likewise.

2022-08-17  Frank Ch. Eigler  <fche@redhat.com>

	* debuginfod.sysconfig: Clarify cmdline vs client-env variables.

2022-05-03  Mark Wielaard  <mark@klomp.org>

	* profile.csh.in: Move the 2>/dev/null inside the sh -c '' quotes.

2022-04-25  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Update for 0.187.

2022-01-19  Ahelenia Ziemiańska <nabijaczleweli@nabijaczleweli.xyz>

	* profile.csh.in: Set DEBUGINFOD_URLS directly. Use "$0" and :
	in sh -c.
	* profile.sh.in: Set DEBUGINFOD_URLS directly. Don't use sh -c.
	Use $() instead of ``.

2022-04-07  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in (debuginfod-client): Add an explicit requires
	on elfutils-libs and elfutils-libelf.

2021-11-10  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Update for 0.186.

2021-10-03  Frank Ch. Eigler  <fche@redhat.com>

	PR27783
	* profile.sh, profile.csh: Rewrite to document and set DEBUGINFOD_URLS
	from /etc/debuginfod/*.urls files.
	* Makefile.am: Install the configury-specified .urls file.
	* elfutils.spec: Package it.

2021-09-05  Dmitry V. Levin  <ldv@altlinux.org>

	* eu.am (STACK_USAGE_NO_ERROR): New variable.

2021-07-06  Alice Zhang  <alizhang@redhat.com>

	* debuginfod.sysconfig: Introduce default retry limit.

2021-05-10  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Update for 0.185.

2021-05-11  Frank Ch. Eigler  <fche@redhat.com>

	* elfutils.spec.in: Add procps to BuildRequires: for %check.

2021-05-10  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Update for 0.184.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>
